<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triage</string>
    <string name="title_activity_login">Triage</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_info">PatientInfoActivity</string>
    <string name="nurseid">ID: </string>
    <string name="btnlogin">Log In</string>
    <string name="password">Password: </string>
    <string name="title_activity_patients_display">PatientsDisplayActivity</string>
    <string name="enter_hc">Look-Up by Health Card Number:</string>
    <string name="search">Search</string>
    <string name="searchHint">Enter Health Card Number</string>
    <string name="title_activity_write__new__records">Write_New_Records</string>
    <string name="title_activity_view_all_records">ViewAllRecords</string>
    <string name="title_activity_enter_vitals">EnterVitalsActivity</string>
    <string name="diastolic_blood_pressure">Blood Pressure (diastolic): </string>
    <string name="systolic_blood_pressure">Blood Pressure (systolic): </string>
    <string name="blood_pressure">Blood Pressure: </string>
    <string name="temperature">Temperature: </string>
    <string name="heart_rate">Heart rate: </string>
    <string name="symptom_description">Description of Symptoms: </string>
    <string name="editRecords">Add Records</string>
    <string name="viewRecords">View Patient History</string>
    <string name="name_field">Full Name: </string>
    <string name="birthdate_field">Birthdate: </string>
    <string name="health_num_field">Health Card #: </string>
    <string name="date_time_field">Date and Time: </string>
    <string name="add_new_records">Add new records for: </string>
    <string name="btn_save">Save</string>
    <string name="Symptoms">Symptoms: </string>
    <string name="patient_records">Patient Records:</string>
    <string name="patient_records_history">Records of the Patient</string>
    <string name="title_activity_add_new_patient">AddNewPatient</string>
    <string name="btnAddPatient">Add Patient</string>
    <string name="btnSavePatient">Save Patient</string>
    <string name="doctor_visit">Add Doctor Visit Record</string>
    <string name="date_time_prompt">Pick a date and time</string>
    <string name="urgency_rating"> Urgency: </string>
    <string name="enter_prescription_info">Enter Prescription Information: </string>
    <string name="seen_by_doctor"> Seen By Doctor: </string>
    <string name="patient_script">Prescription Records</string>
    <string name="patient_vitals">Vital Records</string>
    <string name="btn_back">Back To Emergency Room</string>
    <string name="btn_logOut">Log Out</string>
    


    <string-array name="list_options">
        <item>View all patients</item>
        <item>View patients not seen by a doctor by descending urgency</item>
    </string-array>

    <string name="title_activity_time_dialog">TimeDialogActivity</string>
    <string name="title_activity_add_prescription">AddPrescriptionActivity</string>

</resources>
