<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triage.PatientsDisplayActivity" >

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_sort" >

    </ListView>

    <Button
        android:id="@+id/searchHC"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignBaseline="@+id/searchHCtext"
        android:layout_alignBottom="@+id/searchHCtext"
        android:layout_alignRight="@+id/listView1"
        android:background="@android:drawable/ic_menu_search"
        android:onClick="searchClick" />

    <Spinner
        android:id="@+id/list_sort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:layout_below="@+id/searchHC" />

    <Button
        android:id="@+id/save_prescription"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/searchHC"
        android:text="@string/btnAddPatient"
        android:onClick="addPatient"
         />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="logOutOnClick"
        android:text="@string/btn_logOut" />

    <EditText
        android:id="@+id/searchHCtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_sort"
        android:layout_below="@+id/save_prescription"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/searchHC"
        android:ems="10"
        android:hint="@string/searchHint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchHC"
        android:layout_alignLeft="@+id/searchHCtext"
        android:text="@string/enter_hc" />

</RelativeLayout>
